# ultrasonic.mofmofdetection

./: CONTRIBUTING.md  LICENSE  README.md  application_note.md
.github/ISSUE_TEMPLATE/: default-issue-template.md
exec/: MofMof_CH201.uf2
hardware/: AH-12026-045045-A1_931_v1.0.STEP  AH-21029-045045-01_712_v1.1.STEP
pic/: file_tree.txt
source/: CMakeLists.txt  ch101_gpr.h  ch101_gpr_fw.c  ch101_gpr_fw.h  ch201_gpr_fw.h  ch201_gprmt.h  ch201_gprmt_fw.c  ch_com.c  ch_com.h  ch_drv_ch101.c  ch_drv_ch101.h  ch_drv_ch201.c  ch_drv_ch201.h  ch_lib.c  ch_lib.h  ch_types.h  constant.h  main.c  usr_bsp.c  usr_bsp.h  usr_def.c  usr_def.h  usr_i2c.c  usr_i2c.h
